; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-integrity.c_integrity_read_store.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_blk-integrity.c_integrity_read_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.blk_integrity = type { i32 }

@INTEGRITY_FLAG_READ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.blk_integrity*, i8*, i64)* @integrity_read_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @integrity_read_store(%struct.blk_integrity* %0, i8* %1, i64 %2) #0 {
  %4 = alloca %struct.blk_integrity*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.blk_integrity* %0, %struct.blk_integrity** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = call i64 @simple_strtoul(i8* %10, i8** %7, i32 10)
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %8, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %3
  %15 = load i32, i32* @INTEGRITY_FLAG_READ, align 4
  %16 = load %struct.blk_integrity*, %struct.blk_integrity** %4, align 8
  %17 = getelementptr inbounds %struct.blk_integrity, %struct.blk_integrity* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = or i32 %18, %15
  store i32 %19, i32* %17, align 4
  br label %27

20:                                               ; preds = %3
  %21 = load i32, i32* @INTEGRITY_FLAG_READ, align 4
  %22 = xor i32 %21, -1
  %23 = load %struct.blk_integrity*, %struct.blk_integrity** %4, align 8
  %24 = getelementptr inbounds %struct.blk_integrity, %struct.blk_integrity* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = and i32 %25, %22
  store i32 %26, i32* %24, align 4
  br label %27

27:                                               ; preds = %20, %14
  %28 = load i64, i64* %6, align 8
  ret i64 %28
}

declare dso_local i64 @simple_strtoul(i8*, i8**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
